# dspy-code

./: .dockerignore  .gitignore  AGENT_LEARNING_GUIDE.md  AGENT_STATUS.md  AGENT_STATUS_FINAL.md  AGENT_WORKSPACE_GUIDE.md  BUILD_INSTRUCTIONS.md  CODE_STYLE_ASSISTANT.md  CODING_AGENT_TRAINING_GUIDE.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETE_SYSTEM_README.md  COMPREHENSIVE_TESTING_AND_DEPLOYMENT_GUIDE.md  CONTAINER_SELECTION_GUIDE.md  CONTRIBUTING.md  COORDINATION_STATUS.md  DEV_SETUP.md  DISTRIBUTED_TRAINING_GUIDE.md  DISTRIBUTION_GUIDE.md  ENHANCED_CONTAINER_DISCOVERY.md  FINAL_DEPLOYMENT_INSTRUCTIONS.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INFERMESH_OPTIMIZATION_GUIDE.md  INFRASTRUCTURE_IMPLEMENTATION_STATUS.md  INTEGRATION_SUCCESS.md  LEARNING_EXAMPLE.md  LICENSE  MANUAL_VALIDATION_STEPS.md  MULTI_POLICY_STREAMING_GUIDE.md  Makefile  Makefile.proto  OPTIMIZATION_IMPLEMENTATION_PLAN.md  PYTHON_TEAM_QUICK_START.md  README.md  REALTIME_MONITORING_GUIDE.md  REDDB_SECURITY_GUIDE.md  REDDB_STACK_INTEGRATION.md  RL_LEARNING_STATUS.md  (+50 more)
.dspy_cache/007/: cache.db
.dspy_data/: code_train.jsonl  context_train.jsonl  orch_train.jsonl  task_train.jsonl
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  docker-images.yml  docker-lightweight.yml  docker-publish.yml  make-tests.yml  nightly.yml  release.yml  security.yml  spark-image.yml  spark-train-image.yml  tests.yml
.smoke_ws/: sample.py
cmd/dspy-agent/: README.md  config.go  daemon.go  (+3 more)
diskcache/: __init__.py
docker/: nginx-reddb.conf  reddb-secure.yml
docs/: API.md  DEPLOYMENT.md  GRPO.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE.md  INFRASTRUCTURE_STATUS.md  LATEST_RUST_GO_UPDATES.md  MESH_OPTIMIZATION_ROADMAP.md  MIGRATION.md  OBSERVABILITY.md  PRODUCTION.md  PRODUCTION_DEPLOYMENT.md  PROTO_TOOLING.md  PYTHON_DEVELOPER_HANDOFF.md  PYTHON_INTEGRATION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  REDDB_DATA_MODEL.md  RUNNER_EXECUTION_PLAN.md  RUST_GO_CHANGES_LOG.md  STREAMING_ENGINE_POC.md  TESTING.md  TEST_PLAN.md  USER_FLOWS.md  WORKFLOW_COMPOSER.md  architecture.md  implementation.md  infermesh_integration.md  production_spark_embeddings.md  rl_pufferlib_integration.md
dspy/: __init__.py
dspy_agent/: __main__.py  agent_config.py  autogen_dataset.py  cli.py  cli_output.py  cli_patching.py  cli_retrieval.py  cli_rl.py  cli_rl_trainers.py  cli_utils.py  code_eval.py  code_indexer_worker.py  code_search.py  code_snapshot.py  code_watch.py  config.py  dbkit.py  deploy.py  embeddings_index.py  knowledge.py  launcher.py  llm.py  log_reader.py  orchestrator_runtime.py  patcher.py  policy.py  preferences.py  router_worker.py  stack.py  status_http.py  streaming_config.py  streaming_kafka.py  streaming_runtime.py  train_codegen.py  train_gepa.py  train_orchestrator.py
dspy_coder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
env_manager_rs/: Cargo.toml  README.md  build.rs
env_manager_rs/src/: config.rs  container.rs  grpc_server.rs  health.rs  http_server.rs  main.rs  manager.rs  metrics.rs  retry.rs  service_registry.rs  shutdown.rs
env_manager_rs/src/pb/: env_manager.v1.rs  env_manager.v1.tonic.rs  mesh.v1.rs  mesh.v1.tonic.rs  orchestrator.v1.rs  orchestrator.v1.tonic.rs  runner.v1.rs  runner.v1.tonic.rs
env_runner_rs/: Cargo.toml  Dockerfile.stream  README.md  build.rs
env_runner_rs/src/: executor.rs  hardware.rs  infermesh.rs  lib.rs  main.rs  metrics.rs  notify_watcher.rs  streaming.rs
env_runner_rs/src/pb/: mesh.v1.rs  mod.rs  runner.v1.rs
env_runner_rs/tests/: integration_tests.rs
frontend/: .dockerignore  Dockerfile  backend.Dockerfile  docker-compose.yml  docker-entrypoint.sh  nginx.conf
orchestrator/: Dockerfile.stream  README.md  go.mod  go.sum  orchestrator.sh
proto/: buf.yaml  env_manager.v1.proto  mesh.proto  orchestrator.v1.proto  runner.proto
queries/: README.md  data_overview.py  rl_training_analysis.py  run_all_queries.py  streaming_data_analysis.py
reddb_rs/: Cargo.toml
reddb_rs/src/: dashboard.rs  main.rs
scripts/: advanced_health_monitor.py  agent_dashboard_panel.py  agent_launcher.py  agent_monitor.py  agent_workspace_manager.py  automated_agent_setup.sh  benchmark_infermesh.py  build_official_infermesh.sh  build_project_graph.py  capture_live_run.py  check_dspy.py  cleanup_repo.py  cloud_gpu_config.yaml  cloud_gpu_integration.py  comprehensive_build_and_deploy.sh  comprehensive_deployment_workflow.sh  demo_comprehensive_system.py  demo_isolated_agent.py  demo_learning.py  demo_realtime_monitoring.py  demo_rl_learning.py  deploy-dev.sh  deploy-prod.sh  deploy-test.sh  deploy_production.sh  dev.sh  dev_cycle.sh  dev_loop.sh  dev_workflow.py  dspy_stack_packager.sh  enhanced_deploy_with_tests.sh  enhanced_streaming_connectors.py  environment_manager.py  fix_agent_rebuild.sh  fix_kafka_connectivity.sh  fix_workspace_perms.sh  full_agent_deploy.sh  full_smoke.py  generate_protos.sh  gpu_training_config.py  (+77 more)
test_project/: calculator.py  pyproject.toml  test_calculator.py
tests/: test_agentic_memory.py  test_analytics_utils.py  test_capacity_guardrails_events.py  test_cli.py  test_cli_streaming.py  test_code_search.py  test_code_snapshot.py  test_comprehensive_agent.py  test_config.py  test_context_and_adapter_fallbacks.py  test_custom_verifiers.py  test_diffutil.py  test_docker_optional.py  test_e2e_server.py  test_embed_worker_utils.py  test_embeddings_index.py  test_enhanced_dm_middleware.py  test_env_queue_api.py  test_eval_code_log_api.py  test_event_bus.py  test_events_api.py  test_events_filters_export.py  test_events_sse.py  test_fallback_rl_policy.py  test_feature_store.py  test_gepa_registry.py  test_indexer.py  test_infermesh_embedder.py  test_infermesh_optimization.py  test_kafka_logger.py  test_live_data_logs_dir.py  test_local_up_pipeline.py  test_log_reader.py  test_models_api.py  test_puffer_ppo_shell_wrapper.py  test_reddb_health.py  test_rl_cli_actions.py  test_rl_puffer_sweep.py  test_rl_tooling.py  test_rlkit_analytics.py  (+9 more)
wandb/: latest-run
(+505 files in other folders)
