[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blampert"
version = "0.1.0"
description = "Blampert - A powerful coding assistant that learns and improves through reinforcement learning."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "Apache-2.0"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "dspy-ai>=2.4.9",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.7.4",
    "sentence-transformers>=2.7.0",
    "transformers>=4.51.0",
    "confluent-kafka>=2.3.0",
    "psutil>=5.9.5",
]

[project.scripts]
blampert = "dspy_agent.cli:app"
blampert-agent = "dspy_agent.cli:app"
blampert-coder = "dspy_agent.cli:app"

[project.urls]
Homepage = "https://github.com/RPasquale/dspy_stuff"
Repository = "https://github.com/RPasquale/dspy_stuff.git"
DSPy = "https://github.com/stanfordnlp/dspy.git"
RedDB = "https://github.com/redbco/redb-open.git"

[project.optional-dependencies]
rl = [
    "pufferlib>=3.0.0; platform_machine == \"x86_64\"",
    "gymnasium>=0.27",
    "torch>=2.0.0",
    "verifiers @ git+https://github.com/willccbb/verifiers.git",
    "pyro-ppl>=1.9.0",
    "carbs>=0.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
]
package = true

[tool.setuptools.packages.find]
include = ["dspy_agent", "dspy_agent.*"]
