[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspy-code"
version = "0.1.1"
description = "Blampert - A powerful coding assistant that learns and improves through reinforcement learning."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "dspy-ai>=2.4.9",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.7.4",
    "sentence-transformers>=2.7.0",
    "transformers>=4.51.0",
    "confluent-kafka>=2.3.0",
    "psutil>=5.9.5",
    "websockets>=12.0",
    "asyncio-mqtt>=0.16.1",
    "prometheus-client>=0.20.0",
    # Backend proxy dependencies
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
    # External verifiers package (best-effort; optional at runtime if unavailable)
    "verifiers @ git+https://github.com/willccbb/verifiers.git",
    "pyarrow>=21.0.0",
    "pandas>=2.3.2",
    "kafka-python>=2.2.15",
]

[project.scripts]
# New primary entrypoints
dspy-code = "scripts.agent_launcher:main"
dspy-stack = "scripts.manage_stack:main"
dspy-agent = "dspy_agent.cli:app"
dspy-cli = "dspy_agent.cli:app"
dspy-code-agent = "dspy_agent.cli:app"
dspy-code-coder = "dspy_agent.cli:app"
dspy-code-monitor = "scripts.realtime_monitoring_server:main"
dspy-code-dashboard = "enhanced_dashboard_server:start_enhanced_dashboard_server"
dspy-code-dashboard-lite = "scripts.agent_dashboard_panel:main"
dspy-code-train = "scripts.real_agent_trainer:main"
dspy-code-workspace = "scripts.agent_workspace_manager:main"
dspy-code-rl-sample = "scripts.rl_samples:main"
dspy-code-rl-showcase = "scripts.rl_showcase:main"
dspy-code-proxy = "backend_proxy:main"
# Backward-compatible aliases (will be removed in a future release)
blampert = "dspy_agent.cli:app"
blampert-agent = "dspy_agent.cli:app"
blampert-coder = "dspy_agent.cli:app"
blampert-monitor = "scripts.realtime_monitoring_server:main"
blampert-dashboard = "enhanced_dashboard_server:start_enhanced_dashboard_server"
blampert-train = "scripts.real_agent_trainer:main"
blampert-workspace = "scripts.agent_workspace_manager:main"
blampert-rl-sample = "scripts.rl_samples:main"
blampert-rl-showcase = "scripts.rl_showcase:main"

[project.urls]
Homepage = "https://github.com/RPasquale/dspy_stuff"
Repository = "https://github.com/RPasquale/dspy_stuff.git"
DSPy = "https://github.com/stanfordnlp/dspy.git"
RedDB = "https://github.com/redbco/redb-open.git"

[project.optional-dependencies]
rl = [
    "pufferlib>=3.0.0",
    "gymnasium>=0.27",
    "torch>=2.0.0",
    "pyro-ppl>=1.9.0",
    "carbs>=0.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
]
package = true

[tool.setuptools.packages.find]
include = ["dspy_agent", "dspy_agent.*", "scripts", "frontend"]

[tool.setuptools.package-data]
"frontend" = ["**/*"]
