[package]
name = "env-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "env-manager"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# Docker API
bollard = "0.18"

# gRPC
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# System info
num_cpus = "1.16"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

