[package]
name = "env_runner_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "env_runner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
notify = "6.0"
warp = "0.3"
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"