[package]
name = "reddb_rs"
version = "0.1.0"
edition = "2021"
description = "High-performance RedDB server implemented in Rust"
license = "Apache-2.0"

[[bin]]
name = "reddb"
path = "src/main.rs"

[dependencies]
    axum = { version = "0.7", features = ["macros"] }
    axum-extra = { version = "0.9", features = ["typed-header"] }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
    sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite"] }
    chrono = { version = "0.4", features = ["serde"] }
    tracing = "0.1"
    tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
    thiserror = "1.0"
    anyhow = "1.0"
    tower-http = { version = "0.5", features = ["trace"] }
