[project]
name = "test-calculator"
version = "0.1.0"
description = "A simple calculator project to test the DSPy agent's capabilities"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
